package baseline;

import java.util.List;
import java.util.ArrayList;

public class ToDoListFunctions {
    String title;
    List<Item> taskList = new ArrayList<>();

    public String getTitle() {
        //gets title of toDoList from user
        //validates input to make sure it is atleast 3 characters long
        return null;
    }

    public void deleteItem(Item item){

    }

    public String addItem(Item newItem){
        //adds a new item to the list
        return null;
    }

    public void displayAllLists(){
        //loops through all lists to show all toDoLists
    }

    public void displayCompletedTasks(){
        //loops through every lists to show the ones that have been completed
    }

    public void displayIncompleteTasks(){
        //loops through every lists to show the ones that have not been completed

    }
}


